examples/bench/bad/typing/env4.mlw

(* a reference cannot be used within a goal *)

parameter x : int ref

goal test : x=0
